src/objects/InventoryAsset__c.object
<CustomObject>
    <fields>
        <fullName>accountingInvestment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Investment</label>
        <referenceTo>AccountingInvestment__c</referenceTo>
        <relationshipLabel>Inventory Assets</relationshipLabel>
        <relationshipName>InventoryAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acquisitionCloseDate__c</fullName>
        <formula>IF( assetAcquisitionOverride__c != null, assetAcquisitionOverride__r.Opportunity__r.CloseDate, assetAcquisition__r.Opportunity__r.CloseDate)</formula>
        <label>Acquisition Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>acquisitionEffectiveDate__c</fullName>
        <formula>IF( assetAcquisitionOverride__c != null, assetAcquisitionOverride__r.Opportunity__r.Effective_Date__c, assetAcquisition__r.Opportunity__r.Effective_Date__c )</formula>
        <label>Acquisition Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>acquisitionOpportunityId__c</fullName>
        <formula>IF( assetAcquisitionOverride__c != null,  CASESAFEID( assetAcquisitionOverride__r.Opportunity__c ), CASESAFEID( assetAcquisition__r.Opportunity__c) )</formula>
        <label>Acquisition Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acquisitionOpportunityName__c</fullName>
        <formula>IF( assetAcquisitionOverride__c != null,  assetAcquisitionOverride__r.Opportunity__r.Name ,  assetAcquisition__r.Opportunity__r.Name  )</formula>
        <label>Acquisition Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acquisitionOverrideOpportunity__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + assetAcquisitionOverride__r.Opportunity__c , assetAcquisitionOverride__r.Opportunity__r.Name, &quot;_self&quot;)</formula>
        <label>Acquisition Override Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acquisitionTotalPrice__c</fullName>
        <formula>IF( assetAcquisitionOverride__c != null, assetAcquisitionOverride__r.totalPrice__c, assetAcquisition__r.totalPrice__c ) * -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acquisitionUnitPrice__c</fullName>
        <formula>IF( assetAcquisitionOverride__c != null, assetAcquisitionOverride__r.unitPrice__c, assetAcquisition__r.unitPrice__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>assetAcquisitionOverride__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>select any OT to calculate inventory related statistics</description>
        <label>Asset Acquisition Override</label>
        <referenceTo>Opportunity_Tract__c</referenceTo>
        <relationshipLabel>Acquisition Overrides</relationshipLabel>
        <relationshipName>AssetAcquisitionOverrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>assetAcquisition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Acquisition</label>
        <referenceTo>Opportunity_Tract__c</referenceTo>
        <relationshipLabel>Asset Acquisitions</relationshipLabel>
        <relationshipName>AssetAcquisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>assetSaleOverride__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Sale Override</label>
        <referenceTo>Opportunity_Tract__c</referenceTo>
        <relationshipLabel>Asset Sale Overrides</relationshipLabel>
        <relationshipName>AssetSaleOverrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>assetSale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Sale</label>
        <referenceTo>Opportunity_Tract__c</referenceTo>
        <relationshipLabel>Asset Sales</relationshipLabel>
        <relationshipName>AssetSales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>buyerNextOwnerId__c</fullName>
        <formula>IF( assetSaleOverride__c != null,  CASESAFEID( assetSaleOverride__r.Opportunity__r.Acquiring_Entity__c) ,  CASESAFEID( assetSale__r.Opportunity__r.Acquiring_Entity__c ))</formula>
        <label>Buyer (Next Owner) Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>buyerNextOwnerName__c</fullName>
        <formula>IF( assetSaleOverride__c != null, assetSaleOverride__r.Opportunity__r.Acquiring_Entity__r.Name , assetSale__r.Opportunity__r.Acquiring_Entity__r.Name )</formula>
        <label>Buyer (Next Owner) Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>daysHeld__c</fullName>
        <formula>saleCloseDate__c - acquisitionCloseDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Held</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gainLoss__c</fullName>
        <formula>saleTotalPrice__c +  acquisitionTotalPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gain/Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inventoryOwnerId__c</fullName>
        <formula>CASESAFEID(assetAcquisition__r.Opportunity__r.Acquiring_Entity__c)</formula>
        <label>Inventory Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inventoryOwnerName__c</fullName>
        <formula>assetAcquisition__r.Opportunity__r.Acquiring_Entity__r.Name</formula>
        <label>Inventory Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>saleCloseDate__c</fullName>
        <formula>IF( assetSaleOverride__c != null, assetSaleOverride__r.Opportunity__r.CloseDate, assetSale__r.Opportunity__r.CloseDate)</formula>
        <label>Sale Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>saleEffectiveDate__c</fullName>
        <formula>IF( assetSaleOverride__c != null, assetSaleOverride__r.Opportunity__r.Effective_Date__c, assetSale__r.Opportunity__r.Effective_Date__c)</formula>
        <label>Sale Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>saleOpportunityId__c</fullName>
        <formula>IF( assetSaleOverride__c != null,  CASESAFEID(assetSaleOverride__r.Opportunity__c) ,  CASESAFEID(assetSale__r.Opportunity__c ))</formula>
        <label>Sale Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>saleOpportunityName__c</fullName>
        <formula>IF( assetSaleOverride__c != null, assetSaleOverride__r.Opportunity__r.Name , assetSale__r.Opportunity__r.Name )</formula>
        <label>Sale Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>saleTotalPrice__c</fullName>
        <formula>IF( assetSaleOverride__c != null, assetSaleOverride__r.totalPrice__c, assetSale__r.totalPrice__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>saleUnitPrice__c</fullName>
        <formula>IF( assetSaleOverride__c != null, assetSaleOverride__r.unitPrice__c, assetSale__r.unitPrice__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sellerPreviousOwnerId__c</fullName>
        <formula>IF( assetAcquisitionOverride__c != null,  CASESAFEID( assetAcquisitionOverride__r.Opportunity__r.AccountId) ,  CASESAFEID( assetAcquisition__r.Opportunity__r.AccountId ))</formula>
        <label>Seller (Previous Owner) Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sellerPreviousOwnerName__c</fullName>
        <formula>IF( assetAcquisitionOverride__c != null, assetAcquisitionOverride__r.Opportunity__r.Account.Name , assetAcquisition__r.Opportunity__r.Account.Name )</formula>
        <label>Seller (Previous Owner) Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sellingEntityOverride__c</fullName>
        <formula>assetSaleOverride__r.Opportunity__r.Account.Name</formula>
        <label>Selling Entity Override</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sellingEntity__c</fullName>
        <formula>/*IF( assetSaleOverride__c != null, assetSaleOverride__r.Opportunity__r.Account.Name, assetSale__r.Opportunity__r.Account.Name )*/
assetSale__r.Opportunity__r.Account.Name</formula>
        <label>Selling Entity</label>
        <type>Text</type>
    </fields>
    <label>Inventory Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>assetAcquisition__c</columns>
        <columns>assetAcquisitionOverride__c</columns>
        <columns>assetSale__c</columns>
        <columns>assetSaleOverride__c</columns>
        <columns>accountingInvestment__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IA-{0000000000}</displayFormat>
        <label>Inventory Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>